--- a/P2S10-EndGame/car.kv
+++ b/P2S10-EndGame/car.kv
@@ -17,12 +17,24 @@
 
 <Game>:
     car: game_car
+    # ball1: game_ball1
+    # ball2: game_ball2
+    # ball3: game_ball3
     canvas:
         Rectangle:
             pos: self.pos
-            size: 1350, 550
-            source: "./images/citymap.png"
+            size: 1429, 660
+            source: "./images/citymap.jpeg"
 
     Car:
         id: game_car
         center: self.parent.center
+    # Ball1:
+    #     id: game_ball1
+    #     center: self.parent.center
+    # Ball2:
+    #     id: game_ball2
+    #     center: self.parent.center
+    # Ball3:
+    #     id: game_ball3
+    #     center: self.parent.center
